k8s/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: krishna-devops
  labels:
    name: krishna-devops
